<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Zokirjon Mamadjonov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tRA"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tRA" />


    <LinearLayout
        android:id="@+id/llPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRA">

        <SeekBar
            android:id="@+id/sbRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:progressBackgroundTint="@color/primaryLightColor"
            android:progressTint="@color/red"
            android:thumbTint="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/tvRecordingDurationStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivReplay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/replay_5" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivPlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/play" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivForward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/forward_5" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivMore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/more_horiz" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/llMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCopyToDevice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="0dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    app:srcCompat="@drawable/file_copy"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="43dp"
                    android:layout_marginEnd="23dp"
                    android:text="@string/copy"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvShare"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="0dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    app:srcCompat="@drawable/share"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="43dp"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRename"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="0dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    app:srcCompat="@drawable/rename"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="43dp"
                    android:layout_marginEnd="23dp"
                    android:text="@string/rename"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDelete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="0dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="43dp"
                    android:layout_marginEnd="23dp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>